--- a/Index.html
+++ b/Index.html
@@ -1,147 +1,147 @@
 <html>
+
 <head>
-<title>
-  star bucks
-</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>
+        star bucks
+    </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <link rel="icon" href="img\logo.png" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="utf-8">
-<link rel="stylesheet" href="css\style.css" />
-<style>
- .carousel-inner > .item > img,
- .carousel-inner > .item > a > img {
-     width: 70%;
-     margin: auto;
- }
- </style>
- <script>
- $(window).load(function() {
-   // Animate loader off screen
-   $(".se-pre-con").fadeOut("slow");
- });
- </script>
- <style>
- .no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
-.se-pre-con {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url(img/Preloader_3.gif) center no-repeat #fff;
-}
- </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css\style.css" />
+
+    <script async>
+        $(window).load(function() {
+            // Animate loader off screen
+            $(".se-pre-con").fadeOut("slow");
+        });
+    </script>
+    <style>
+        .no-js #loader {
+            display: none;
+        }
+
+        .js #loader {
+            display: block;
+            position: absolute;
+            left: 100px;
+            top: 0;
+        }
+
+        .se-pre-con {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url(img/Preloader_3.gif) center no-repeat #fff;
+        }
+    </style>
 
 </head>
+
 <body>
-  <div class="se-pre-con"></div>
-	<!-- Ends -->
+    <div class="se-pre-con"></div>
+    <!-- Ends -->
 
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Star Bucks</a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Star Bucks</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="order online.html">Order online</a></li>
+                <li><a href="contact us.html">Contact us</a></li>
+                <li> <a href="locate.html">Locate us</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img\logo.png" class="img-responsive logo" alt="sorry" id="1" />
+            </div>
+            <div class="col-md-6   text-uppercase">
+                <h1>Star Bucks</h1>
+                <h4>Coffee</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <br>
+                <img class="img-responsive coffeeimage" src="img\coffee-shop.jpg" >
+                <br>
+            </div>
+
+            <div class="col-md-6" >
+            <p>Every day, we go to work hoping to do two things: share great coffee with our friends and help make the world a little better. It was true when the first Starbucks opened in 1971, and it’s just as true today. Back then, the company was a single store in Seattle’s historic Pike Place Market. From just a narrow storefront, Starbucks offered some of the world’s finest fresh-roasted whole bean coffees. The name, inspired by Moby Dick, evoked the romance of the high seas and the seafaring tradition of the early coffee traders. In 1981, Howard Schultz (Starbucks chairman and chief executive officer) had first walked into a Starbucks store. From his first cup of Sumatra, Howard was drawn into Starbucks and joined a year later. In 1983, Howard traveled to Italy and became captivated with Italian coffee bars and the romance of the coffee experience. He had a vision to bring the Italian coffeehouse tradition back to the United States. A place for conversation and a sense of community. A third place between work and home. He left Starbucks for a short period of time to start his own Il Giornale coffeehouses and returned in August 1987 to purchase Starbucks with the help of local investors. From the beginning, Starbucks set out to be a different kind of company. One that not only celebrated coffee and the rich tradition, but that also brought a feeling of connection. Our mission to inspire and nurture the human spirit – one person, one cup, and one neighborhood at a time.</p>
+        </div>
+
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="order online.html">Order online</a></li>
-      <li><a href="contact us.html">Contact us</a></li>
-      <li> <a href="locate.html">Locate us</a></li>
-    </ul>
-  </div>
-</nav>
-  <div class="container">
-  <div class="row">
-  <div class="col-md-6">
-  <img src="img\logo.png" class="img-responsive" alt="sorry" id="1" />
-  </div>
-  <div class="col-md-6   text-uppercase"  >
-  <h1>Star Bucks</h1>
-  <h4>Coffee</h4>
-</div>
-</div>
-<div class="row">
-  <div class="col-md-6"><br>
-    <img class="img-responsive" src="img\coffee-shop.jpg" id="2" /><br>
-  </div>
-
-  <div class="col-md-6" />
-    <p>Every day, we go to work hoping to do two things: share great coffee with our friends and help make the world a little better. It was true when the first Starbucks opened in 1971, and it’s just as true today.
-
-Back then, the company was a single store in Seattle’s historic Pike Place Market. From just a narrow storefront, Starbucks offered some of the world’s finest fresh-roasted whole bean coffees. The name, inspired by Moby Dick, evoked the romance of the high seas and the seafaring tradition of the early coffee traders.
-
-In 1981, Howard Schultz (Starbucks chairman and chief executive officer) had first walked into a Starbucks store. From his first cup of Sumatra, Howard was drawn into Starbucks and joined a year later.
-
-In 1983, Howard traveled to Italy and became captivated with Italian coffee bars and the romance of the coffee experience. He had a vision to bring the Italian coffeehouse tradition back to the United States. A place for conversation and a sense of community. A third place between work and home. He left Starbucks for a short period of time to start his own Il Giornale coffeehouses and returned in August 1987 to purchase Starbucks with the help of local investors.
-
-From the beginning, Starbucks set out to be a different kind of company. One that not only celebrated coffee and the rich tradition, but that also brought a feeling of connection.
-
-Our mission to inspire and nurture the human spirit – one person, one cup, and one neighborhood at a time.</p>
-</div>
-
-</div>
-<div class="col-md-12"><hr></div>
-<div class="row">
-  <div class="col-md-12">
-    <h2> Gallery</h2>
-  </div>
-</div>
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img\1.jpg"   />
+    <div class="col-md-12">
+        <hr>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2> Gallery</h2>
+        </div>
     </div>
 
-    <div class="item">
-      <img src="img\2.jpg">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="img\1.jpg" />
+            </div>
+
+            <div class="item">
+                <img src="img\2.jpg">
+            </div>
+
+            <div class="item">
+                <img src="img\3.jpg">
+            </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+
     </div>
-
-    <div class="item">
-      <img src="img\3.jpg">
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            <h2> Vedio Gallery </h2>
+        </div>
     </div>
+    <iframe width="250" height="250" src="https://www.youtube.com/embed/hPbrlNsMTg4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
+    <iframe width="250" height="250" src="https://www.youtube.com/embed/NDpwC5Obhi4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
+    <iframe width="250" height="250" src="https://www.youtube.com/embed/S9NCFKlVo20" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
+    <iframe width="250" height="250" src="https://www.youtube.com/embed/aC-q0n2WcPc" frameborder="0" allowfullscreen></iframe>
 
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-
-</div>
-<br>
-<div class="row">
-  <div class="col-md-12">
-    <h2> Vedio Gallery </h2>
-  </div>
-</div>
-<iframe width="250" height="250" src="https://www.youtube.com/embed/hPbrlNsMTg4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-<iframe width="250" height="250" src="https://www.youtube.com/embed/NDpwC5Obhi4" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-<iframe width="250" height="250" src="https://www.youtube.com/embed/S9NCFKlVo20" frameborder="0" allowfullscreen></iframe>&nbsp;&nbsp;&nbsp;
-<iframe width="250" height="250" src="https://www.youtube.com/embed/aC-q0n2WcPc" frameborder="0" allowfullscreen></iframe>
-
-</div>
+    </div>
 
 </body>
+
 </html>
