--- a/locate.html
+++ b/locate.html
@@ -8,7 +8,26 @@
        <link rel="icon" href="img\logo.png" />
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta charset="utf-8">
-       <link rel="stylesheet" href="css\style1.css" />
+       <style>
+       h1
+       {
+
+         padding-top:60;
+         font-family: 'Source Sans Pro', sans-serif;
+         font-size:40;
+       }
+       h2
+       {
+         font-family: 'Source Sans Pro', sans-serif;
+         font-size:40;
+         text-align: center;
+       }
+       input
+       {
+         align: left;
+       }
+
+       </style>
 
 </head>
 <body>
