order online modified

--- a/order online.html
+++ b/order online.html
@@ -11,7 +11,7 @@
        <link rel="stylesheet" href="css\style1.css" />
 
 </head>
-<body>
+<body >
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -25,7 +25,7 @@
     </ul>
   </div>
 </nav>
-<div class="container">
+<div class="container abc1">
   <div class="row">
     <div class="col-md-3">
     <a href="index.html"><img src="img\logo.png" class="img-responsive" alt="sorry" style="height:20%" /></a>
@@ -34,20 +34,38 @@
       <h1 style="padding-top:30px"> Welcome To Star Bucks </h1>
     </div>
   </div>
-    <form>
+
+    <div class="row">
       <div class="form-group col-md-6 form">
+    <form >
+
         <h2>Drinks</h2>
         <div class="checkbox abc">
-        <label><input type="checkbox" />Choco Frappe</label><br>
+        <div class="row"><div class="col-md-4"><label><input type="checkbox"/>Choco Frappe</label></div>
+        <div class="col-md-4"><img src="img\chocofrappe.png" height="70px" width="70px"></div><div class="col-md-4"></div></div><br>
+        <div class="row"><div class="col-md-4"><label><input type="checkbox"/>Majito</label></div>
+        <div class="col-md-4"><img src="img\chocofrappe.png" height="70px" width="70px"></div></div><br>
+        <div class="row"><div class="col-md-4"><label><input type="checkbox"/>Cappucino</label></div>
+        <div class="col-md-4"><img src="img\chocofrappe.png" height="70px" width="70px"></div></div><br>
+        <div class="row"><div class="col-md-4"><label><input type="checkbox"/>Espresso</label></div>
+        <div class="col-md-4"><img src="img\chocofrappe.png" height="70px" width="70px"></div></div><br>
+
+        <!--<label><input type="checkbox" />Majito</label> <br>
         <label><input type="checkbox" />Fresh Lemon</label><br>
-        <label><input type="checkbox" />Majito</label><br>
         <label><input type="checkbox" />Cappuccino</label><br>
-        <label><input type="checkbox" />Espresso</label>
-      </div>
+        <label><input type="checkbox" />Espresso</label>-->
       </div>
     </form>
+  </div>
+  <!--<div class="col-md-6 images">
+    <img src="img\chocofrappe.png" height="70px" width="70px"><br>
+    <img src="img\chocofrappe.png" height="70px" width="70px"><br>
+    <img src="img\chocofrappe.png" height="70px" width="70px"><br>
+    <img src="img\chocofrappe.png" height="70px" width="70px"><br>
+    <img src="img\chocofrappe.png" height="70px" width="70px">
+  </div>-->
 
-
+</div>
 </div>
 </body>
 </html>
